fix issue about date-selector height on small screen

--- a/front/src/app/routes/activities/popin-edit-activities/popin-edit-activities.component.scss
+++ b/front/src/app/routes/activities/popin-edit-activities/popin-edit-activities.component.scss
@@ -9,6 +9,7 @@
   .left-section {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 90%;
     
     .title-popin {
